--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "chart.js": "^4.5.0",
-    "react-dom": "^19.1.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "chart.js": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
